fixed minor readability issues

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,3 +25,6 @@
     -ms-transform: scale(1.03);
     transform: scale(1.03);
 }
+a{
+    color: yellow;
+}
